# IntergalacticCargoPortal-Gurram

./: .gitignore  README.md
backend/: db.sqlite3  pyproject.toml
backend/accounts/: admin.py  authentication.py  backends.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/cargo/: admin.py  models.py  parsers.py  permissions.py  serializers.py  urls.py  views.py
backend/cargo/migrations/: 0001_initial.py  0002_cargorecord_created_by_cargorecord_updated_at_and_more.py
backend/certs/: README.md  private.pem  public.pem
backend/config/: settings.py  urls.py
backend/core/: apps.py  constants.py  exceptions.py  jwt.py  models.py  pagination.py  token_blacklist.py  utils.py  validators.py
backend/scripts/: generate_jwt_keys.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AppLayout.jsx  PageHeader.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AboutUsPage.jsx  AuthPage.jsx  DashboardPage.jsx  UserManagementPage.jsx
